<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Episods.CustomAlertDialogActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp16"
        android:gravity="center"
        android:text="@string/custom_alert_dialog"
        android:textSize="40sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/dp16"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/cadEtTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sampleText" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/cadEtMsg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/songName" />

        </android.support.design.widget.TextInputLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/cadChkPositive">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/cadEtPositive"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/positive" />

            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/cadChkPositive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/cadChkcadEtPositive">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/cadEtNegative"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/negative" />

            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/cadChkcadEtPositive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/cadChkcadEtNeutral">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/cadEtNeutral"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/neutral" />

            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/cadChkcadEtNeutral"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp4"
            android:layout_marginTop="@dimen/dp10">


            <TextView
                android:id="@+id/cadEtDismiss"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/cadChkcadEtDismiss"
                android:gravity="center_vertical"
                android:hint="@string/dissmissable" />


            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/cadChkcadEtDismiss"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true" />

        </RelativeLayout>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/cadFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/dp16"
        android:padding="@dimen/dp4"
        app:srcCompat="@drawable/ic_done_black_24dp"


        />
</RelativeLayout>